Edited a ton of API shite and added ignore for appsettings to allow secret connectionstring

--- a/SurfsUp-API/appsettings.json
+++ b/SurfsUp-API/appsettings.json
@@ -7,6 +7,6 @@
   },
   "AllowedHosts": "*",
   "ConnectionStrings": {
-    "SurfsUpContextConnection": "Server=(localdb)\\mssqllocaldb;Database=SurfsUp;Trusted_Connection=True;MultipleActiveResultSets=true"
+    "SurfsUpContextConnection": "ConnectionString"
   }
 }
