--- a/SurfsUp-web/Properties/launchSettings.json
+++ b/SurfsUp-web/Properties/launchSettings.json
@@ -14,7 +14,8 @@
       "launchBrowser": true,
       "applicationUrl": "https://localhost:7200;http://localhost:5200",
       "environmentVariables": {
-        "ASPNETCORE_ENVIRONMENT": "Development"
+        "ASPNETCORE_ENVIRONMENT": "Development",
+        "SURFSUP_API_URL": "https://localhost:7211"
       }
     },
     "IIS Express": {
