--- a/SurfsUp-web/SurfsUp.csproj
+++ b/SurfsUp-web/SurfsUp.csproj
@@ -23,4 +23,8 @@
     <PackageReference Include="Microsoft.VisualStudio.Web.CodeGeneration.Design" Version="6.0.10" />
   </ItemGroup>
 
+  <ItemGroup>
+    <ProjectReference Include="..\SurfsUp-API\SurfsUp-API.csproj" />
+  </ItemGroup>
+
 </Project>
