--- a/.gitignore
+++ b/.gitignore
@@ -58,5 +58,5 @@ bin
 .vscode
 
 # 4 tusinde væk
-**/appsettings.json
-**/appsettings.Development.json
+**/appsettings.json*
+**/appsettings.Development.json*
