--- a/SurfsUp-API/appsettings.Development.json
+++ b/SurfsUp-API/appsettings.Development.json
@@ -7,6 +7,6 @@
   },
   "AllowedHosts": "*",
   "ConnectionStrings": {
-    "SurfsUpContextConnection": "ConnectionString"
+    "SurfsUpContextConnection": "gfsgf"
   }
 }
