Separated the models into a class library and started blazor

--- a/SurfsUp-web/SurfsUp.csproj
+++ b/SurfsUp-web/SurfsUp.csproj
@@ -24,7 +24,7 @@
   </ItemGroup>
 
   <ItemGroup>
-    <ProjectReference Include="..\SurfsUp-API\SurfsUp-API.csproj" />
+    <ProjectReference Include="..\SurfsUp-Models\SurfsUp-Models.csproj" />
   </ItemGroup>
 
 </Project>
