--- a/SurfsUp-API/SurfsUp-API.csproj
+++ b/SurfsUp-API/SurfsUp-API.csproj
@@ -18,4 +18,8 @@
     <PackageReference Include="Swashbuckle.AspNetCore" Version="6.2.3" />
   </ItemGroup>
 
+  <ItemGroup>
+    <ProjectReference Include="..\SurfsUp-Models\SurfsUp-Models.csproj" />
+  </ItemGroup>
+
 </Project>
