--- a/SurfsUp-API/Properties/launchSettings.json
+++ b/SurfsUp-API/Properties/launchSettings.json
@@ -16,7 +16,8 @@
       "launchUrl": "swagger",
       "applicationUrl": "https://localhost:7211;http://localhost:5211",
       "environmentVariables": {
-        "ASPNETCORE_ENVIRONMENT": "Development"
+        "ASPNETCORE_ENVIRONMENT": "Development",
+        "OPENWEATHERAPI_KEY": "YOUR_WEATHERAPI_KEY"
       }
     },
     "IIS Express": {
