--- a/SurfsUpBlazor/SurfsUpBlazor/Client/Properties/launchSettings.json
+++ b/SurfsUpBlazor/SurfsUpBlazor/Client/Properties/launchSettings.json
@@ -15,8 +15,7 @@
       "inspectUri": "{wsProtocol}://{url.hostname}:{url.port}/_framework/debug/ws-proxy?browser={browserInspectUri}",
       "applicationUrl": "https://localhost:7196;http://localhost:5196",
       "environmentVariables": {
-        "ASPNETCORE_ENVIRONMENT": "Development",
-        "OPENWEATHERAPI_KEY": ""
+        "ASPNETCORE_ENVIRONMENT": "Development"
       }
     },
     "IIS Express": {
