--- a/SurfsUpBlazor/SurfsUpBlazor/Server/Properties/launchSettings.json
+++ b/SurfsUpBlazor/SurfsUpBlazor/Server/Properties/launchSettings.json
@@ -15,7 +15,8 @@
         "inspectUri": "{wsProtocol}://{url.hostname}:{url.port}/_framework/debug/ws-proxy?browser={browserInspectUri}",
         "applicationUrl": "https://localhost:7196;http://localhost:5196",
         "environmentVariables": {
-          "ASPNETCORE_ENVIRONMENT": "Development"
+          "ASPNETCORE_ENVIRONMENT": "Development",
+          "OPENWEATHERAPI_KEY": ""
         }
       },
       "IIS Express": {
